sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value ecart
  ecart=getNombreValeurs()/2
  ^AlgShellSort:5: error: not found: value ecart
    while (ecart>0){
           ^AlgShellSort:8: error: not found: value ecart
    while (a!=0 && getValeur(a-ecart)>v){
                               ^AlgShellSort:9: error: not found: value ecart
      copie(a-ecart,a)
              ^AlgShellSort:10: error: not found: value ecart
      a-=ecart
         ^