sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart=getNombreValeurs()/2
  for (i<- 1 to getNombreValeurs()-1){
    while (ecart>0){
     var v=getValeur(i)
    var a=i
    while (a!=0 && getValeur(a-ecart)>v){
      copie(a-ecart,a)
      a-=ecart
    }
    setValeur(a,v) 
    }
  }
}
